@@ -1,3 +1,11 @@
+2008-05-12  Hans-Peter Nilsson  <hp@axis.com>
+
+	Backport from mainline:
+	2008-04-08  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config/cris/cris.c (cris_address_cost): For a PLUS, swap tem1
+	and tem2 if tem1 is not a REG or MULT.
+
 2008-05-11 Danny Smith  <dannysmith@users.sourceforge.net>
 
 	Backport from mainline:
